tests/errors/sem.no-match.sig-return.or
main :: () -> void {
    T :: (a: (int, int) -> !u) -> u {
        return a(1, 2);
    };

    T(10);
};
